MCWEB-628 Train and airport
adding icons beside each landmark in each hostel

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3231,3 +3231,17 @@ width: 275px;}
     width: 16px;
     margin-left: -6px;
 }
+.landmark_type_train_station{
+    background: url("../images/map/train.png") no-repeat scroll left top / 16px 16px transparent;
+    padding-left: 17px;
+}
+
+.landmark_type_airport{
+    background: url("../images/map/air-plane.png") no-repeat scroll left top / 16px 16px transparent;
+    padding-left: 17px;
+}
+
+.landmark_type_city_center{
+    background: url("../images/map/air-plane.png") no-repeat scroll left top / 16px 16px transparent;
+    padding-left: 17px;
+}
