--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -1344,7 +1344,7 @@ a.review_wrap_close{position:absolute; top:5px; right:0px; font-size:1em;}
 
 /* Hostel_view*/
 a.back_to_results{margin-bottom:10px;display:block; margin-left:5px;}
-.address_title{background:url(../images/V2/icon_address.png) no-repeat 2px 0px; padding-left:30px;}
+.address_title{background:url(../images/map_markers/selected/marker_selected_0.png) no-repeat 2px 0px; padding-left:30px; height: 52px; padding-left: 45px ;}
 .hostel-meta{border-top:1px dashed #aaaaaa; margin-top:10px;}
 .fblike{height:25px; float:left; margin-right:20px; margin-top:12px;}
 .view-hostel .amenities{ margin-top:10px;float:right;}
