--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3232,16 +3232,19 @@ width: 275px;}
     margin-left: -6px;
 }
 .landmark_type_train_station{
-    background: url("../images/map/train.png") no-repeat scroll left top / 16px 16px transparent;
+    background: url("../images/map/train.png") no-repeat scroll left top transparent;
+    background-size: 16px 16px;
     padding-left: 17px;
 }
 
 .landmark_type_airport{
-    background: url("../images/map/air-plane.png") no-repeat scroll left top / 16px 16px transparent;
+    background: url("../images/map/air-plane.png") no-repeat scroll left top transparent;
+    background-size: 16px 16px;
     padding-left: 17px;
 }
 
 .landmark_type_city_center{
-    background: url("../images/map/air-plane.png") no-repeat scroll left top / 16px 16px transparent;
+    background: url("../images/map/air-plane.png") no-repeat scroll left top transparent;
+    background-size: 16px 16px;
     padding-left: 17px;
 }
