MCWEB-628 Train and airport
fix problems with views

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3244,7 +3244,7 @@ width: 275px;}
 }
 
 .landmark_type_city_center{
-    background: url("../images/map/air-plane.png") no-repeat scroll left top transparent;
+    background: url("../images/map/city_center.png") no-repeat scroll left top transparent;
     background-size: 16px 16px;
     padding-left: 17px;
 }
