--- a/web/ci/css/pdf.css
+++ b/web/ci/css/pdf.css
@@ -15,6 +15,7 @@
 .select-translate,
 .share-email,
 .best_price,
+.toast-position-middle-center,
 #hostel-show-commentaries-tab {
 	display: none !important;
 }
