MCWEB-699_Expand-Map

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3253,3 +3253,7 @@ width: 275px;}
     background-size: 16px 16px;
     padding-left: 17px;
 }
+#city_map_expand_map{
+    margin-bottom: 0px;
+    text-align: center;
+}
