--- a/web/ci/css/compare_property_print.css
+++ b/web/ci/css/compare_property_print.css
@@ -92,7 +92,8 @@ a.micro_site_Link {
 	margin-left: 0;
 	margin-top: 2px;
 }
-.quick_compare_image span {
+.quick_compare_image span,
+.quick_compare_image p {
 	color: #FF6600;
 	display: block;
 	font-size: 11px;
