--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2376,7 +2376,10 @@ ul.flag-footer li a{ margin:0px; padding: 0 0px 0 0px; color:#ffffff; text-inden
 	width:16px;
 	height:14px;
 }
-
+.flag-none{
+	width:1px;
+	height:14px;
+}
 .outside-inner{
 	padding:10px;
 	font-size:0.9em;
