MCWEB-699_Expand-Map
fix property type yellow line too close to checkbox

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -1958,7 +1958,7 @@ cursor:pointer;
 * html .filter_content ul li {height: 1%;}
 .filter_content ul li {display: block;}
 
-.filter_content ul li input.checkbox{float:left; margin-right:10px; margin-top:0px;}
+.filter_content ul li input.checkbox{float:left; margin-right:10px; margin-top:0px; margin-left: 4px;}
 
 label.slide_filter{
 	display:block;
