--- a/web/ci/css/pdf.css
+++ b/web/ci/css/pdf.css
@@ -7,7 +7,7 @@
 #top_bar_inner,
 #hostels_tabs,
 .main ul li a,
-#top_info_short,
+/*#top_info_short,*/
 #read_more_hostel,
 .translation-toggle,
 .fblike,
@@ -16,6 +16,7 @@
 .share-email,
 .best_price,
 .toast-position-middle-center,
+.view-hostel .save_to_favorites_options,
 #hostel-show-commentaries-tab {
 	display: none !important;
 }
