--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2456,6 +2456,7 @@ text-align: -webkit-center;
 	text-decoration: underline;
 }
 
+#booking_confirm_dialog,
 #save_property_dialog,
 #share-overlay {
 	position: fixed;
@@ -2472,10 +2473,12 @@ text-align: -webkit-center;
 	display: none;
 }
 
+#booking_confirm_dialog,
 #save_property_dialog {
 	background: url('../images/fancybox_overlay.png');
 }
 
+#booking_confirm_dialog .content_container,
 #save_property_dialog .content_container {
 	margin: 0 auto;
 /*	height: 630px;*/
@@ -2499,10 +2502,12 @@ text-align: -webkit-center;
 	margin: 0;
 }
 
+#booking_confirm_dialog .content #content
 #save_property_dialog .content #content {
 	margin: 10px;
 }
 
+#booking_confirm_dialog .close,
 #save_property_dialog .close {
 	float: right;
 	width: 50px;
@@ -2537,6 +2542,7 @@ text-align: -webkit-center;
 	display: none;
 }
 
+#booking_confirm_dialog .title,
 #share-overlay .content .title {
 	color: #00359f;
 	font-weight: bold;
@@ -2998,6 +3004,7 @@ width: 275px;}
 	border: none;
 }
 
+#booking_confirm_dialog .title,
 #save_property_dialog .title {
 	padding: 10px;
 	background-color: #00aeec;
