--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -2372,10 +2372,12 @@ ul.flag-footer li a{ margin:0px; padding: 0 0px 0 0px; color:#ffffff; text-inden
 .flag-ie,   a.flag-ie{ background:url(../images/V2/flag-ie.png) no-repeat center left; }							   
 .flag-in,   a.flag-in{ background:url(../images/V2/flag-in.png) no-repeat center left; }							   
 .flag-asia, a.flag-asia{ background:url(../images/V2/flag-asia.png) no-repeat center left; }						   
+
+/*
 *[class^="flag-"]{
 	width:16px;
 	height:14px;
-}
+} */
 .flag-none{
 	width:1px;
 	height:14px;
