--- a/web/ci/css/jquery.dropdown.css
+++ b/web/ci/css/jquery.dropdown.css
@@ -1,30 +1,30 @@
 .dropdown {
-	position: absolute;
-	z-index: 9999999;
-	display: none;
+    position: absolute;
+    z-index: 9999999;
+    display: none;
 }
 
 .dropdown .dropdown-menu,
 .dropdown .dropdown-panel {
-	min-width: 160px;
-	max-width: 360px;
-	list-style: none;
-	background: #FFF;
-	border: solid 1px #DDD;
-	border: solid 1px rgba(0, 0, 0, .2);
-	border-radius: 6px;
-	box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+    min-width: 160px;
+    max-width: 360px;
+    list-style: none;
+    background: #FFF;
+    border: solid 1px #DDD;
+    border: solid 1px rgba(0, 0, 0, .2);
+    border-radius: 6px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
 
-	padding: 4px 0;
-	margin: 0;
+    padding: 4px 0;
+    margin: 0;
 }
 
 .dropdown .dropdown-panel {
-	padding: 10px;
+    padding: 10px;
 }
 
 .dropdown.dropdown-tip {
-	margin-top: 8px;
+    margin-top: 8px;
 }
 
 .dropdown.dropdown-tip:before {
@@ -40,8 +40,8 @@
 }
 
 .dropdown.dropdown-tip.dropdown-anchor-right:before {
-	left: auto;
-	right: 9px;
+    left: auto;
+    right: 9px;
 }
 
 .dropdown.dropdown-tip:after {
@@ -56,53 +56,53 @@
 }
 
 .dropdown.dropdown-tip.dropdown-anchor-right:after {
-	left: auto;
-	right: 10px;
+    left: auto;
+    right: 10px;
 }
 
 
 .dropdown.dropdown-scroll .dropdown-menu,
 .dropdown.dropdown-scroll .dropdown-panel {
-	max-height: 358px;
-	overflow: auto;
+    max-height: 358px;
+    overflow: auto;
 }
 
 .dropdown .dropdown-menu LI {
-	list-style: none;
-	padding: 0 0;
-	margin: 0;
-	line-height: 18px;
+    list-style: none;
+    padding: 0 0;
+    margin: 0;
+    line-height: 18px;
 }
 
 .dropdown .dropdown-menu LI > A,
 .dropdown .dropdown-menu LABEL {
-	display: block;
-	color: #555;
-	text-decoration: none;
-	line-height: 18px;
-	padding: 3px 15px;
-	white-space: nowrap;
+    display: block;
+    color: #555;
+    text-decoration: none;
+    line-height: 18px;
+    padding: 3px 15px;
+    white-space: nowrap;
 }
 
 .dropdown .dropdown-menu LI > A:hover,
 .dropdown .dropdown-menu LABEL:hover {
-	background-color: #08C;
-	color: #FFF;
-	cursor: pointer;
+    background-color: #08C;
+    color: #FFF;
+    cursor: pointer;
 }
 
 .dropdown .dropdown-menu .dropdown-divider {
-	font-size: 1px;
-	border-top: solid 1px #E5E5E5;
-	padding: 0;
-	margin: 5px 0;
+    font-size: 1px;
+    border-top: solid 1px #E5E5E5;
+    padding: 0;
+    margin: 5px 0;
 }
 
 /* Icon Examples - icons courtesy of http://p.yusukekamiyamane.com/ */
 .dropdown.has-icons LI > A {
-	padding-left: 30px;
-	background-position: 8px center;
-	background-repeat: no-repeat;
+    padding-left: 30px;
+    background-position: 8px center;
+    background-repeat: no-repeat;
 }
 
 .dropdown .undo A { background-image: url(icons/arrow-curve-180-left.png); }
@@ -123,16 +123,17 @@
     margin-right:0;
 }
 .dropdown-menu{
-	max-height:200px;
-	overflow-y: scroll;
-	overflow-x: hidden;
-	-webkit-appearance: none;
+    max-height:200px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    -webkit-appearance: none;
 }
 
 #top_hd_currency, #search-currency{
-	color:black;
+    color:black;
 
 }
+/*
 .dropdown-title{
     cursor: pointer;
     padding-right:22px;
@@ -142,17 +143,21 @@
     height: 18px;
     padding-top: 5px; 
     color:black;
+}*/ 
+.dropdown-title{
+    background: url(../images/dropdown-arrow.gif) no-repeat 6px 6px; padding-left:25px;
 }
+    
 
 #search-currency{
 width:220px;
 }
 
 #search-currency.dropdown-tip:before{
-	left:119px;
+    left:119px;
 }
 #search-currency.dropdown-tip:after{
-	left: 120px
+    left: 120px
 }
 
 #language-dropdown{
