--- a/web/ci/css/jquery.dropdown.css
+++ b/web/ci/css/jquery.dropdown.css
@@ -145,7 +145,7 @@
     color:black;
 }*/ 
 .dropdown-title{
-    background: url(../images/dropdown-arrow.gif) no-repeat 6px 6px; padding-left:25px;
+    background: url(../images/dropdown-arrow.gif) no-repeat 6px 6px; padding-left:25px; cursor:pointer;
 }
     
 
