MCWEB-699_Expand-Map
make the little box "click here to expand map" more part of the left map, not as box on it own on top of the left map.

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3263,13 +3263,16 @@ width: 275px;}
     margin: 0;
 }
 #show_expanded_map{
-    height: 3%;
-    left: 0;
+    background: none repeat scroll 0 0 white;
+    border: 0 none;
+    height: 2%;
+    left: 15%;
+    padding-bottom: 12px;
     position: absolute;
     text-align: center;
-    top: 0;
-    width: 91%;
-    z-index: 10000
+    top: 6px;
+    width: 62%;
+    z-index: 10000;
 }
 #close_expanded_map{
     margin-left: 793px;
