MCWEB-699_Expand-Map
make the little box "click here to expand map" more part of the left map, not as box on it own on top of the left map.

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3292,8 +3292,9 @@ width: 275px;}
 }
 .filter_landmark_link ,.filter_district_link{
     float: left;
-    margin-right: 6px;
-    width: 36%;
+    margin-left: 4px;
+    margin-right: 9px;
+    width: 35%;
 }
 .leftside_filter_links{
     width: 100% !important;    
