fixes for MCWEB-631

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3257,3 +3257,21 @@ width: 275px;}
 #map_city_landing_page{
     margin: 0;
 }
+
+#benefits_popup h4,
+#benefits_popup p {
+	text-align: left;
+}
+
+.bookingFeeDesc_text {
+	cursor: pointer;
+	color: #3087C9;
+}
+
+#benefits_popup {
+	left: 200px !important;
+}
+
+#benefits_popup .popup-info-arrow {
+	left: 92% !important;
+}
