fixes for MCWEB-631

--- a/web/ci/css/mainv2.css
+++ b/web/ci/css/mainv2.css
@@ -3268,8 +3268,13 @@ width: 275px;}
 	color: #3087C9;
 }
 
+.bookingFeeDesc_text img {
+	vertical-align: middle;
+}
+
 #benefits_popup {
-	left: 200px !important;
+	left: 220px !important;
+	bottom: 120px !important;
 }
 
 #benefits_popup .popup-info-arrow {
